# arcana-ecosystem

./: .Xauthority  .bash_history  .bashrc  .env  .envrc  .gitignore  .gitmodules  .integrity_manifest.sha256  .pwd  .viminfo  .wget-hsts  ARC.sol  AUDIT_CHEAT_SHEET.txt  AUDIT_INTERACTION_LOG.txt  ArcanaBridgeL1.sol  ArcanaCC.sol  ArcanaIdentity.sol  ArcanaSovereign.sol  ArcanaTokens.sol  CC_Address.txt  CC_Compiled.json  CLUSTER_BLUEPRINT.txt  CONSTITUTION.md  CreditCoinPrivate.sol  FINAL_20GB_PROOF.txt  FUNDING_ALTERNATIVES_2026.txt  GRANT_MANIFEST_SUMMARY.txt  INFRASTRUCTURE_RECEIPT_JAN2026.txt  INSTITUTIONAL_DECK_OUTLINE.txt  LEGAL_FRAMEWORK.md  LICENSE  LOAN_COLLATERAL_MANIFEST.txt  MASTER_PORTFOLIO.md  MN_DEED_SSBCI_ONEPAGER_2026.txt  Modelfile  PITCH_SCRIPTS_2026.txt  README.md  RescueLock.sol  Retry_offramp.sh  SECURITY_MANIFEST_2026-02-02.txt  (+243 more)
.cargo/: .global-cache
ironclaw_core/: Cargo.toml
ironclaw_core/config/: capability.toml
ironclaw_core/ironclaw_core/: Cargo.toml  FEATURE_PARITY.md
ironclaw_core/ironclaw_core/registry/: _bundles.json
ironclaw_core/ironclaw_core/scripts/: dev-setup.sh
ironclaw_core/ironclaw_core/src/: app.rs  main.rs  service.rs  testing.rs
ironclaw_core/ironclaw_core/src/agent/: agent_loop.rs  commands.rs  dispatcher.rs  submission.rs
ironclaw_core/ironclaw_core/tests/: wasm_channel_integration.rs
ironclaw_core/src/: main.rs
prover-engine/: ArcanaTokens.sol  Cargo.toml  client_test.py  monitor_swaps.sh  settlement_ledger.json  swarm_test.py  test_engine.py  truststack_api.py
prover-engine/src/: lib.rs  main.rs
(+76140 files in other folders)
