[package]
name = "nexus-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexus_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rayon = "1.8"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.16.0"
tokio = { version = "1", features = ["full"] }
